--- a/4. woche.ipynb
+++ b/4. woche.ipynb
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -337,14 +337,32 @@
       "Name: \n",
       "Type: Graph\n",
       "Number of nodes: 4039\n",
-      "Number of edges: 88359\n",
-      "Average degree:  43.7529\n"
+      "Number of edges: 88368\n",
+      "Average degree:  43.7574\n"
      ]
     }
    ],
    "source": [
     "hk = nx.powerlaw_cluster_graph(n,k,1.0)\n",
     "print(nx.info(hk))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "options = {\n",
+    "    'node_color': 'black',\n",
+    "    'node_size': 10,\n",
+    "    'line_color': 'dimgrey',\n",
+    "    'linewidths': 0,\n",
+    "    'width': 0.1,\n",
+    "}\n",
+    "nx.draw(fb, **options)\n",
+    "plt.savefig('graph_fb')\n",
+    "plt.show()"
    ]
   }
  ],
